--- a/texts/latex/reference.bib
+++ b/texts/latex/reference.bib
@@ -222,6 +222,13 @@
   url = "http://www.sqlite.org/"
 }
 
+@ONLINE{selenium,
+  title = "Selenium - Web Browser Automation",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://seleniumhq.org/"
+}
+
 @ONLINE{wiki:sameorigin,
   title = "{Přispěvatelé Wikipedie}",
   cited = "28.\,3.\,2012",
