Texty - zmineni akceptacnich testu ve shrnuti

--- a/texts/latex/includes/zaver.tex
+++ b/texts/latex/includes/zaver.tex
@@ -2,7 +2,7 @@
 
 \section{Závěrečné zhodnocení aplikace}
 
-Zhodnocení aplikace z pohledu splnění požadavků je snadné, stačí si projít user stories z části týkající se metodiky a hned bude jasné, které byly naplněny a které nikoliv. Pokud se tedy použije tento postup, procentuální splnění požadavků se dostane na 95\%. V aplikaci chybí párování úkolů a jednotlivých commitů ze vzdáleného serveru. Analýza totiž ukázala, že tuto možnost má pouze GitHub, ostatní ji neposkytují, proto od ní bylo upuštěno a nebyla zahrnuta do aplikace.
+Zhodnocení aplikace z pohledu splnění požadavků je snadné, stačí si projít user stories z části týkající se metodiky a hned bude jasné, které byly naplněny a které nikoliv. Přehled nesplněných user stories byl již uveden v kapitole 6 - testování v tabulce \ref{tab:failed-accept-tests}. Celkový počet user stories je 29, z toho 4 nebyly naplněny. Procentuální splnění požadavků se tak dostane na 86\%. 
 
 \section{Doporučení do dalšího vývoje}
 
