Texty - rozsireni uvodu

--- a/texts/latex/reference.bib
+++ b/texts/latex/reference.bib
@@ -5,6 +5,13 @@
   url = "http://www.mitvsehotovo.cz/2008/09/metoda-gtd-getting-things-done/"
 }
 
+@ONLINE{gtdtoolweb,
+  title = "GTDTool - vývojářský úkolovník",
+  cited = "12.\,5.\,2012",
+  year = 2012,
+  url = "http://gtdtool.satera.cz"
+}
+
 @ONLINE{gtd:wiki,
   author = "{Přispěvatelé Wikipedie}",
   title = "Getting Things Done",
