Texty - oddeleni inst.prirucky, doplneni nasazeni

--- a/texts/latex/Saterond-thesis-2012.tex
+++ b/texts/latex/Saterond-thesis-2012.tex
@@ -263,56 +263,8 @@ Obsahem této práce je vytvoření nástroje pro vývojáře, který umožní s
 \end{description}
 
 %*****************************************************************************
-\chapter{Instalační a uživatelská příručka}
-Instalace této aplikace je poměrně jednoduchá a průměrný uživatel PC by s ní neměl mít sebemenší problém. Obsahem přiloženého CD je i adresář \uv{install}, ve kterém jsou dva soubory. Jeden s koncovkou \uv{msi} určený pro operační systém Windows a druhý s koncovkou \uv{dmg} určený pro Mac OS X. Pro lepší ilustraci jsou pod tímto textem zobrazeny všechny kroky instalace v hierarchickém pořadí.
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/01.png}
-		\caption{První krok instalace}
-		\label{fig:install-01}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/02.png}
-		\caption{Potvrzení licenčních podmínek}
-		\label{fig:install-02}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/03.png}
-		\caption{Výběr umístění aplikace}
-		\label{fig:install-03}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/04.png}
-		\caption{Spuštění samotné instalace}
-		\label{fig:install-04}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/05.png}
-		\caption{Probíhá instalace}
-		\label{fig:install-05}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=10cm]{figures/install/06.png}
-		\caption{Instalace dokončena}
-		\label{fig:install-06}
-	\end{center}
-\end{figure}
+\chapter{Instalační příručka}
+Instalační příručka je součástí příloh na přiloženém CD.
 
 %*****************************************************************************
 \chapter{Obsah přiloženého CD}
