--- a/texts/latex/includes/nasazeni.tex
+++ b/texts/latex/includes/nasazeni.tex
@@ -1,6 +1,8 @@
 \chapter{Nasazení aplikace}
 
-Titanium framework je deklarován jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian\cite{debian}, jakožto zástupce Linuxu, a Mac OS X\cite{mac}. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit. 
+Titanium framework je deklarován jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian\cite{debian}, jakožto zástupce Linuxu, a Mac OS X\cite{mac}. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit.
+
+Další problémy se objevily ve finální fázi, kdy měla být aplikace připravena pro instalaci na jiných počítačích. Titanium Studio totiž umí aplikaci přeložit pouze pro platformu, na které momentálně běží. Takže například není možné na Windows přeložit aplikaci určenou pro Mac a obráceně. A to navzdory tomu, že překlad je prováděn za asistence vzdáleného serveru, což mimochodem proces překladu výrazně zpomaluje. O multiplatformnosti Titanium Studia lze tedy oprávněně pochybovat.
 
 \section{Linux}
 Test nasazení byl proveden na virtuálním stroji s nainstalovaným operačním systémem Debian ve verzi 6.0.3 (i386).
@@ -10,5 +12,3 @@ Zde se ukázalo jako nemožné samotné spuštění vývojového prostředí Tit
 \section{Mac OS X}
 
 Testování na této platformě bylo poměrně problematické, protože odpovídající operační systém nebyl k dispozici. Pokusy o nasazení byly prováděny pouze na soukromém počítači vedoucího této práce a lze říci, že nebyly 100\% úspěšné. Na rozdíl od Linuxu sice bylo možné nainstalovat a spustit vývojové prostředí, ale se samotnou aplikací už ne. Ani po mnoha pokusech se ji nezdařilo plně zprovoznit. Neustále se objevovaly chyby na úrovni OS, které byly obtížně odstranitelné.
-
-O multiplatformnosti Titanium Studia lze tedy oprávněně pochybovat.
